// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconGridView should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-grid-view "
  height={9}
  viewBox="0 0 9 9"
  width={9}
>
  <path
    className="fill-color"
    d="M3 1v2H1V1h2m1-1H0v4h4V0zM8 1v2H6V1h2m1-1H5v4h4V0zM3 6v2H1V6h2m1-1H0v4h4V5zM8 6v2H6V6h2m1-1H5v4h4V5z"
    fill="#444"
    fillOpacity={1}
  />
</AccessibleSVG>
`;

exports[`icons/general/IconGridView should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-grid-view test"
  height={100}
  title="title"
  viewBox="0 0 9 9"
  width={200}
>
  <path
    className="fill-color"
    d="M3 1v2H1V1h2m1-1H0v4h4V0zM8 1v2H6V1h2m1-1H5v4h4V0zM3 6v2H1V6h2m1-1H0v4h4V5zM8 6v2H6V6h2m1-1H5v4h4V5z"
    fill="#222"
    fillOpacity={0.2}
  />
</AccessibleSVG>
`;
